feat: add create fruit
